/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package com.mycompany.eva2_8_clases_anonimas;

/**
 *
 * @author jesus
 */
public interface MostrarMensaje {
   void mostrarMensaje(String mensaje);
}
