/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 */

package com.mycompany.eva2_9_extends_interfaz;

/**
 *
 * @author jesus
 */
public class EVA2_9_EXTENDS_INTERFAZ {

    public static void main(String[] args) {
        Automovil auto=new Automovil("ford","mustang");
        auto.mostrarMensaje();
        auto.mostrarMensaje("hola mundo");
    }
}
