/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.mycompany.eva2_9_extends_interfaz;

/**
 *
 * @author jesus
 */
public interface Extras {
    void mostrarMensaje(String mensaje);
}
